--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+SC&display=swap');
-body{
+
+body {
     display: flex;
     justify-content: space-around;
     background-color: rgb(255, 221, 221);
@@ -10,13 +11,13 @@ body{
 
 
 table {
-    width: 100%; 
+    width: 100%;
     border-collapse: collapse;
     background: rgb(252, 234, 234);
     font-weight: 400;
 }
 
-.removing{
+.removing {
     background-color: red;
 }
 
@@ -30,7 +31,7 @@ table tr {
 }
 
 
-.edit_button{
+.edit_button {
     border: none;
     padding: 5px 15px;
     margin: 10px 20px;
@@ -50,8 +51,8 @@ table tr {
     box-shadow: 0 0 10px 0 #f7ed6b inset, 0 0 10px 4px #f7ed6b;
     color: #beb201;
 }
-      
-.delete_button{
+
+.delete_button {
     border: none;
     padding: 5px 15px;
     margin: 10px 20px;
@@ -71,7 +72,7 @@ table tr {
     color: #e05353;
 }
 
-.submit_button{
+.submit_button {
     border: none;
     padding: 10px 15px;
     margin: 20px 0px;
@@ -84,7 +85,7 @@ table tr {
     transition: .15s ease-in-out;
 }
 
-.edit-user_button{
+.edit-user_button {
     border: none;
     padding: 10px 15px;
     margin: 20px 0px;
@@ -112,7 +113,7 @@ table tr {
 }
 
 
-.input{
+.input {
     border: 1px solid #b399ac;
     padding: 10px 15px;
     margin: 0;
@@ -124,65 +125,65 @@ table tr {
     transition: .15s ease-in-out;
 }
 
-.wrong{
-    border-color:  red;
+.wrong {
+    border-color: red;
 }
 
 .modal {
     display: none;
-    position: fixed; 
+    position: fixed;
     left: 0;
     top: 0;
-    width: 100%; 
+    width: 100%;
     height: 100%;
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.5);
-    
-  }
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
 
- 
-  .modal-content {
+}
+
+
+.modal-content {
     background-color: rgb(252, 234, 234);
-    margin: 15% auto; 
+    margin: 15% auto;
     padding: 30px;
     color: rgb(48, 0, 82);
     border-radius: 10px;
     width: 30%;
     text-align: center;
-  }
-  
-  .close {
+}
+
+.close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: rgb(48, 0, 82);
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
-  .main{
-      font-style: italic;
-      font-weight: 500;
-      color: rgb(15, 2, 24); 
-  }
+.main {
+    font-style: italic;
+    font-weight: 500;
+    color: rgb(15, 2, 24);
+}
 
- .show{
+.show {
     display: block;
-  }
+}
 
- .hidden{
+.hidden {
     display: none;
-  }
+}
 
-  .question{
+.question {
     border: none;
-    margin-top: 15px ;
+    margin-top: 15px;
     margin-left: 5px;
     margin-right: 5px;
     border-radius: 60px;
@@ -206,16 +207,16 @@ table tr {
     cursor: pointer;
 }
 
-.question_show{
+.question_show {
     display: flex;
-    
+
 }
 
-.question_hide{
+.question_hide {
     display: none;
 }
 
 
-.cell{
+.cell {
     text-align: center;
 }
